--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,4 +1,4 @@
-name: Package Application with Pyinstaller
+name: Package Linux release
 
 on:
   push:
@@ -15,6 +15,6 @@ jobs:
         with:
           python_ver: '3.12.2'
           spec: 'keepalive.py'
-          requirements: 'requirements.txt'
+          requirements: 'requirements-linux.txt'
           upload_exe_with_name: 'marshall-keepalive-linux'
           options: --onefile, --name "marshall-keepalive",
