--- a/.github/workflows/build-osx-m.yml
+++ b/.github/workflows/build-osx-m.yml
@@ -1,4 +1,4 @@
-name: Package Application with Pyinstaller
+name: Package OSX - M series release
 
 on:
   push:
@@ -10,6 +10,10 @@ jobs:
   pyinstaller-build:
     runs-on: macos-latest
     steps:
+      - name: Install Requirements
+        uses: CondorMacBride/install-package@v1
+        with:
+          brew: portaudio
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
